--- a/styles/styles.css
+++ b/styles/styles.css
@@ -88,7 +88,8 @@
   --heading-font-size-xs: 22px;
 
   /* nav height */
-  --nav-height: 64px;
+  --nav-height: 80px;
+  --category-nav-height: 64px;
 
   /* grid */
   --grid-container-width: 1160px;
@@ -1015,11 +1016,11 @@ The height and width are set to 200 assuming the doodles won't be larger. */
   }
 
   header {
-    height: 62px; /* nav = 62px */
+    height: 80px; /* nav = 80px */
   }
 
   header:has(.category-nav-wrapper) {
-    height: 126px; /* nav + category-nav = 62px + 64px */
+    height: 144px; /* nav + category-nav = 80px + 64px */
   }
 
   /* CLS guard: reserve space for all-about cards before block CSS loads */
