missed a "calc" on header height

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1020,7 +1020,7 @@ The height and width are set to 200 assuming the doodles won't be larger. */
   }
 
   header:has(.category-nav-wrapper) {
-    height: var(--category-nav-height) + var(--nav-height); /* nav + category-nav = 80px + 64px * = 144px */
+    height: calc(var(--category-nav-height) + var(--nav-height)); /* nav + category-nav = 80px + 64px * = 144px */
   }
 
   /* CLS guard: reserve space for all-about cards before block CSS loads */
