--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -369,7 +369,7 @@ footer .footer>div .section:nth-child(4) {
   color: #0D0D0D;
   font-weight: 200;
   font-size: 12px;
-  padding: 30px 0;
+  padding: 30px 0 160px 0;
 }
 
 .footer>div>div:nth-child(3) .accordion-wrapper .accordion .accordion-item .accordion-item-label::after {
